--- a/style.css
+++ b/style.css
@@ -52,5 +52,27 @@ body {
 .card p {
     color: var(--light-grey);
     font-size: 15px;
+    line-height: 24px;
+    margin-bottom: 24px;
+}
 
+.botoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.botoes button {
+    width: 51px;
+    height: 51px;
+    background-color: var(--dark-blue);
+    border-radius: 50%;
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--medium-grey);
+    line-height: 24px;
+    border: none;
+}
+
+.botoes button:hover {
+    
 }
