--- a/style.css
+++ b/style.css
@@ -87,7 +87,10 @@ body {
     background-color: var(--light-grey);
 }
 
-.card > button {
+.card > a {
+    text-decoration: none;
+    text-align: center;
+    display: block;
     width: 100%;
     padding: 13px;
     font-size: 15px;
@@ -101,7 +104,7 @@ body {
     transition: all ease-in-out 0.3s;
 }
 
-.card > button:hover {
+.card > a:hover {
     color: var(--orange);
     background-color: var(--white);
     cursor: pointer;
