--- a/Pages/Agradecimento.css
+++ b/Pages/Agradecimento.css
@@ -32,3 +32,16 @@ body {
    border-radius: 30px;
 
 }
+
+.card h1 {
+    color: var(--white);
+    font-size: 21px;
+    margin-bottom: 15px;
+}
+
+.card p {
+    color: var(--light-grey);
+    font-size: 15px;
+    line-height: 24px;
+    margin-bottom: 24px;
+}
