--- a/Pages/Agradecimento.css
+++ b/Pages/Agradecimento.css
@@ -28,9 +28,25 @@ body {
 .card {
    background: var(--black-gradient);
    max-width: 412px;
-   padding: 32px;
+   padding: 45px 32px;
    border-radius: 30px;
+    text-align: center;
+}
 
+.card img {
+    margin-bottom: 32px;
+    
+}
+
+.card .paragrafo_nota {
+    padding: 4px 18px;
+    background-color: var(--dark-blue);
+    border-radius: 22px;
+    width: fit-content;
+    margin-inline: auto;
+    font-size: 15px;
+    color: var(--orange);
+    margin-bottom: 32px;
 }
 
 .card h1 {
@@ -43,5 +59,5 @@ body {
     color: var(--light-grey);
     font-size: 15px;
     line-height: 24px;
-    margin-bottom: 24px;
+    
 }
